--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
-show_downloads: true
+title: Palo Alto Amateur Radio Association
+description: Since 1937... The Friendliest HAM Radio Club Around!
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-architect
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
