--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Palo Alto Amateur Radio Association
 description: Since 1937... The Friendliest HAM Radio Club Around!
 show_downloads: false
-is_project_page: false
-is_user_page: false
+github.is_project_page: false
+github.is_user_page: false
 google_analytics:
 theme: jekyll-theme-architect
 remote_theme: pages-themes/architect@v0.2.0
