--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Home
   link: /index.html
-- name: New Ham Welcome
+- name: New Hams
   link: /newham.html
 - name: About Us
   link: /aboutus.html
