adding more context for POTA (#26)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,9 +22,9 @@
   link: /officers.html
 - name: Photos
   link: /photos.html
+- name: POTA/SOTA
+  link: /ontheair.html
 - name: Resources
   link: /resources.html
-- name: Pota/Sota
-  link: /ontheair.html
 - name: Sponsors
   link: /sponsors.html
